--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,9 +1,9 @@
 #backdrop {
-    background-color: black;
+    background-color: $black;
     position: absolute;
     width: 100vw;
     height: 100vh;
-    min-height: 1000px;
+    min-height: 62.rem;
     opacity: .7;
     display: none;
 }
@@ -23,12 +23,12 @@
 
 .modal__button-bar {
     position: absolute;
-    bottom: 23px;
-    right: 33px;
+    bottom: 1.45rem;
+    right: 2rem;
 }
 
 .modal__btn {
-    padding: 8px 16px 8px 8px;
+    padding: .5rem 1rem .5rem .5rem;
     border-radius: 2px;
     box-shadow: none;
     border: 1px solid $gray-dark;
@@ -39,8 +39,8 @@
     background-color: $blue-dark;
     color: $white;
     border: $blue-dark;
-    margin-right: 10px;
-    padding: 9px 23px 9px 13px;
+    margin-right: 0.625rem;
+    padding: 0.5625rem 1.5rem 0.5625rem 0.75rem;
 
     &:hover {
         background-color: $blue-light;
@@ -66,13 +66,13 @@
 }
 
 .modal__form-wrapper {
-    height: 28rem;
+    height: 27rem;
     overflow-y: scroll;
 }
 
 .form__group {
   position: relative;
-  padding: 15px 0 0;
+  padding: 1rem 0 0;
   margin-top: 1.25rem;
   width: 50%;
 }
@@ -85,7 +85,7 @@
   outline: 0;
   font-size: 1.2rem;
   color: $black;
-  padding: 20px 0 8px 0;
+  padding: 1.25rem 0 .5rem 0;
   background: transparent;
   transition: border-color 0.2s;
 
@@ -96,7 +96,7 @@
   &:placeholder-shown ~ .form__label {
     font-size: 1rem;
     cursor: text;
-    top: 20px;
+    top: 1.25rem;
   }
 }
 
@@ -119,7 +119,7 @@
     color: $blue-dark;
     font-weight:700;    
   }
-  padding-bottom: 6px;  
+  padding-bottom: 0.375rem;  
   font-weight: 700;
   border-width: 3px;
   border-image: linear-gradient(to right, $blue-dark, $blue-light);
