--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,7 +11,7 @@ html {
     font-size: 100%; //1 rem = 10px; 10px/16px = 62.5%
 }
 
-body {
+main {
     box-sizing: border-box;
     padding: 3rem;
 }
