--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,10 @@
 @import "components/popup";
 @import "components/story";
 
+
+@import "components/table";
+@import "components/pagination";
+
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
