--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -66,8 +66,9 @@
 }
 
 .modal__form-wrapper {
-    height: 27rem;
+    height: 26rem;
     overflow-y: scroll;
+    padding-bottom: 2rem;
 }
 
 .form__group {
