--- a/sass/components/_table.scss
+++ b/sass/components/_table.scss
@@ -100,6 +100,12 @@ table.table--blue tfoot a.table__show-rows {
         margin-right: 0.25rem;
     }
 
+    &:focus {
+        outline: none;
+        background-color: $blue-light;
+        color: $white;
+    }
+
     &:hover {
         border-radius: 3px;
         background-color: $blue-light;
