--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $gray-light: #B3B3B3;
 $gray-light-2: #EEEEEE;
 $gray-light-3: #DDDDDD;
 $gray-dark: #AAAAAA;
+$gray-dark-2: #888888;
 
 $gray-blue-1: #D0E4F5;
 $gray-blue-2: #91AEC6;
