--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,8 +1,9 @@
 #backdrop {
     background-color: black;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    min-height: 1000px;
     opacity: .7;
     display: none;
 }
@@ -20,16 +21,43 @@
 
 .modal__button-bar {
     position: absolute;
-    bottom:10px;
-    right: 10px;
+    bottom: 23px;
+    right: 28px;
 }
 
 .modal__btn {
-    padding: 8px;
+    padding: 8px 16px 8px 8px;
+    border-radius: 2px;
+    box-shadow: none;
+    border: 1px solid $gray-dark;
 }
 
 
 .modal__save-btn {
-    background-color: blue;
-    color: white;
+    background-color: $blue-dark;
+    color: $white;
+    border: $blue-dark;
+    margin-right: 10px;
+
+    &:hover {
+        background-color: $blue-light;
+        cursor: pointer;
+    }
+}
+
+.modal__cancel-btn {
+    color: $gray-dark-2;
+    &:hover {
+        background-color: $white;
+        cursor: pointer;
+    }
+
+}
+
+.modal__btn-icon {
+    margin-right: .4rem;
+}
+
+.modal__btn-icon-cancel {
+    opacity: .75;
 }
