--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,7 +8,7 @@
 
 html {
     // This defines what 1rem is
-    font-size: 100%; //1 rem = 10px; 10px/16px = 62.5%
+    font-size: 100%;
 }
 
 main {
