--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ table.table--blue th {
   padding: 3px 2px; }
 
 table.table--blue tbody td {
-  font-size: 13px; }
+  font-size: 0.8rem; }
 
 table.table--blue tbody tr:hover {
   background-color: rgba(145, 174, 198, 0.3);
@@ -55,21 +55,22 @@ table.table--blue thead {
   background: #91AEC6; }
 
 table.table--blue thead th {
-  font-size: 15px;
+  font-size: .85rem;
   font-weight: bold;
   color: #ffffff;
-  border-left: 2px solid #D0E4F5; }
+  border-left: 2px solid #D0E4F5;
+  padding-bottom: 0.65rem; }
 
 table.table--blue thead th:first-child {
   border-left: none; }
 
 table.table--blue tfoot {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: normal;
   color: #ffffff; }
 
 table.table--blue tfoot td {
-  font-size: 14px; }
+  font-size: 0.875rem; }
 
 table.table--blue tfoot .links {
   text-align: right; }
@@ -97,7 +98,8 @@ table.table--blue tfoot a.table__show-rows {
     margin-right: 1rem; }
 
 .table__filter-input {
-  width: 90%; }
+  width: 90%;
+  height: 20px; }
 
 .table__edit-button {
   border: none;
@@ -115,6 +117,9 @@ table.table--blue tfoot a.table__show-rows {
 
 .table__edit-cell {
   width: 60px; }
+
+.table__select {
+  color: #1C6EA4; }
 
 htm,
 body {
@@ -197,7 +202,7 @@ a {
   position: absolute;
   background-color: #ffffff;
   left: 22%;
-  top: 25%;
+  top: 20%;
   width: 54%;
   height: 30rem;
   display: none;
