--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ table.table--blue {
 table.table--blue td,
 table.table--blue th {
   border: 1px solid #AAAAAA;
-  padding: 3px 2px; }
+  padding: 3px 4px; }
 
 table.table--blue tbody td {
   font-size: 0.8rem; }
@@ -98,8 +98,8 @@ table.table--blue tfoot a.table__show-rows {
     margin-right: 1rem; }
 
 .table__filter-input {
-  width: 90%;
-  height: 20px; }
+  width: 100%;
+  height: 1.25rem; }
 
 .table__edit-button {
   border: none;
@@ -116,7 +116,7 @@ table.table--blue tfoot a.table__show-rows {
       color: #ffffff; }
 
 .table__edit-cell {
-  width: 60px; }
+  width: 3.75rem; }
 
 .table__select {
   color: #1C6EA4; }
@@ -249,7 +249,7 @@ a {
 .form__group {
   position: relative;
   padding: 15px 0 0;
-  margin-top: 15px;
+  margin-top: 1.25rem;
   width: 50%; }
 
 .form__field {
