--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -70,14 +70,10 @@
     overflow-y: scroll;
 }
 
-$primary: #11998e;
-$secondary: #38ef7d;
-$gray: #9b9b9b;
-
 .form__group {
   position: relative;
   padding: 15px 0 0;
-  margin-top: 15px;
+  margin-top: 1.25rem;
   width: 50%;
 }
 
