--- a/sass/components/_table.scss
+++ b/sass/components/_table.scss
@@ -9,7 +9,7 @@ table.table--blue {
 table.table--blue td,
 table.table--blue th {
     border: 1px solid $gray-dark;
-    padding: 3px 2px;
+    padding: 3px 4px;
 }
 
 table.table--blue tbody td {
@@ -86,8 +86,8 @@ table.table--blue tfoot a.table__show-rows {
 }
 
 .table__filter-input {
-    width: 90%;
-    height: 20px;
+    width: 100%;
+    height: 1.25rem;
 }
 
 .table__edit-button {
@@ -113,7 +113,7 @@ table.table--blue tfoot a.table__show-rows {
 }
 
 .table__edit-cell {
-    width: 60px;
+    width: 3.75rem;
 }
 
 .table__select {
