--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 
 @import "components/table";
 @import "components/pagination";
+@import "components/modal";
 
 @import "layout/footer";
 @import "layout/grid";
@@ -26,4 +27,3 @@
 @import "layout/navigation";
 
 @import "pages/home";
-
