--- a/sass/components/_pagination.scss
+++ b/sass/components/_pagination.scss
@@ -1,123 +1,134 @@
-
 //----------  responsive breakpoints
 //------------------------------------------------------------------------------
 @mixin breakpoint ($value) {
-    @if $value == 'phone' {
-      @media only screen and (min-width: 120px) and (max-width: 767px) { @content; }
-    } @else if $value == 'tablet' {
-      @media only screen and (min-width: 768px) and (max-width: 1024px) { @content; }
-    } @else if $value == 'touch' {
-      @media only screen and (min-width: 120px) and (max-width: 1024px) { @content; }
-    } @else if $value == 'desktop' {
-      @media only screen and (min-width: 1025px) { @content; }
-    } @else {
-      @media only screen and (max-width: $value) { @content; }
+    @if $value=='phone' {
+        @media only screen and (min-width: 120px) and (max-width: 767px) {
+            @content;
+        }
     }
-  }
-  
-  // Colors
-  $white: #fff;
-  $black: #000;
-  $grey: #595959;
-  $grey-dark: #2b2b2b;
-  $grey-light: #eee;
-  $green: #86c023;
-  $blue: #017ac7;
-  
-  // Transition
-  $duration: 400ms;
-  $easing: ease;
-  
-  //----------  reset
-  //------------------------------------------------------------------------------
-  htm,
-  body {
+
+    @else if $value=='tablet' {
+        @media only screen and (min-width: 768px) and (max-width: 1024px) {
+            @content;
+        }
+    }
+
+    @else if $value=='touch' {
+        @media only screen and (min-width: 120px) and (max-width: 1024px) {
+            @content;
+        }
+    }
+
+    @else if $value=='desktop' {
+        @media only screen and (min-width: 1025px) {
+            @content;
+        }
+    }
+
+    @else {
+        @media only screen and (max-width: $value) {
+            @content;
+        }
+    }
+}
+
+// Transition
+$duration: 700ms;
+$easing: ease;
+
+//----------  reset
+//------------------------------------------------------------------------------
+htm,
+body {
     font-family: sans-serif;
-  }
-  
-  a {
+}
+
+a {
     text-decoration: none;
-  }
-  
-  //----------  pagination
-  //------------------------------------------------------------------------------
-  .pagination-wrapper {
+}
+
+//----------  pagination
+//------------------------------------------------------------------------------
+.pagination-wrapper {
     text-align: center;
-    margin: 40px 0;
-  }
-  
-  .pagination {
-      display: inline-block;
-      height: 70px;
-      margin-top: 70px;
-      padding: 0 25px;
-      border-radius: 35px;
-      background-color: $grey-light;
-  
-      @include breakpoint(1199px) {
-          height: 50px;
-          margin-top: 50px;
-          padding: 0 10px;
-          border-radius: 25px;
-      }
-  }
-  
-  .page-numbers {
-      display: block;
-      padding: 0 25px;
-      float: left;
-      transition: $duration $easing;
-      color: $grey;
-      font-size: 20px;
-      letter-spacing: 0.1em;
-      line-height: 70px;
-  
-      &:hover,
-      &.current {
-          background-color: $green;
-          color: $white;
-      }
-  
-      &.prev:hover,
-      &.next:hover {
-          background-color: transparent;
-      color: $green;
-      }
-  
-      @include breakpoint(1199px) {
-          padding: 0 15px;
-          font-size: 16px;
-          line-height: 50px;
-      }
-  
-      @include breakpoint(touch) {
-          padding: 0 14px;
-          display: none;
-  
-          &:nth-of-type(2) {
-              position: relative;
-              padding-right: 50px;
-  
-              &::after {
-                  content: '...';
-                  position: absolute;
-                  font-size: 25px;
-                  top: 0;
-                  left: 45px;
-              }
-          }
-  
-          &:nth-child(-n+3),
-          &:nth-last-child(-n+3) {
-              display: block;
-          }
-  
-          &:nth-last-child(-n+4) {
-              padding-right: 14px;
-  
-              &::after {
-                  content: none;
-              }
-          }
-      }
-  }
+    margin-top: 25px;
+    margin-bottom: -4px;
+}
+
+.pagination {
+    display: inline-block;
+    height: 50px;
+    margin-top: 0;
+    margin-bottom: 10px;
+    padding: 0 25px;
+    border-radius: 35px;
+    background-color: $gray-light-3;
+
+    @include breakpoint(1199px) {
+        height: 50px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        padding: 0 10px;
+        border-radius: 25px;
+    }
+}
+
+.page-numbers {
+    display: block;
+    padding: 7px 22px;
+    float: left;
+    transition: 400ms ease;
+    color: #595959;
+    font-size: 16px;
+    letter-spacing: 0.1em;
+    line-height: 36px;
+
+    &:hover,
+    &.current {
+        background-color: $blue-light;
+        color: $white;
+    }
+
+    &.prev:hover,
+    &.next:hover {
+        background-color: transparent;
+        color: $blue-light;
+    }
+
+    @include breakpoint(1199px) {
+        padding: 0 15px;
+        font-size: 16px;
+        line-height: 50px;
+    }
+
+    @include breakpoint(touch) {
+        padding: 0 14px;
+        display: none;
+
+        &:nth-of-type(2) {
+            position: relative;
+            padding-right: 50px;
+
+            &::after {
+                content: '...';
+                position: absolute;
+                font-size: 25px;
+                top: 0;
+                left: 45px;
+            }
+        }
+
+        &:nth-child(-n+3),
+        &:nth-last-child(-n+3) {
+            display: block;
+        }
+
+        &:nth-last-child(-n+4) {
+            padding-right: 14px;
+
+            &::after {
+                content: none;
+            }
+        }
+    }
+}
