--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
   /*font-size: 16px;*/
   line-height: 1.7; }
 
+h1 {
+  margin-bottom: 1rem; }
+
 table.table--blue {
   border: 1px solid #1C6EA4;
   background-color: #EEEEEE;
@@ -76,9 +79,11 @@ table.table--blue tfoot a.table__show-rows {
   background: transparent;
   text-decoration: underline;
   cursor: pointer; }
+  table.table--blue tfoot a.table__show-rows:hover {
+    color: blue; }
 
 .table__show-rows-wrapper {
-  margin: 0 auto;
+  margin: 0 auto 1rem auto;
   text-align: center; }
   .table__show-rows-wrapper a.table__show-rows {
     margin-right: 1rem; }
@@ -119,7 +124,7 @@ a {
   display: inline-block;
   height: 50px;
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 14px;
   padding: 0 25px;
   border-radius: 35px;
   background-color: #DDDDDD; }
