--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ table.table--blue {
 table.table--blue td,
 table.table--blue th {
   border: 1px solid #AAAAAA;
-  padding: 3px 4px; }
+  padding: 0.1875rem 0.25rem; }
 
 table.table--blue tbody td {
   font-size: 0.8rem; }
@@ -79,7 +79,7 @@ table.table--blue tfoot .links a {
   display: inline-block;
   background: #B3B3B3;
   color: #ffffff;
-  padding: 4px 16px;
+  padding: 0.25rem 1rem;
   border-radius: 2px; }
 
 table.table--blue tfoot a.table__show-rows {
@@ -104,10 +104,10 @@ table.table--blue tfoot a.table__show-rows {
 .table__edit-button {
   border: none;
   cursor: pointer;
-  padding: 5px;
+  padding: 0.3125rem;
   background-color: transparent; }
   .table__edit-button .table__edit-icon {
-    margin-right: 4px; }
+    margin-right: 0.25rem; }
   .table__edit-button:hover {
     border-radius: 3px;
     background-color: #91AEC6;
@@ -120,6 +120,13 @@ table.table--blue tfoot a.table__show-rows {
 
 .table__select {
   color: #1C6EA4; }
+
+.table__filter-input-text {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: right;
+  white-space: nowrap; }
 
 htm,
 body {
@@ -190,11 +197,11 @@ a {
           content: none; } }
 
 #backdrop {
-  background-color: black;
+  background-color: #000000;
   position: absolute;
   width: 100vw;
   height: 100vh;
-  min-height: 1000px;
+  min-height: 62rem;
   opacity: .7;
   display: none; }
 
@@ -211,11 +218,11 @@ a {
 
 .modal__button-bar {
   position: absolute;
-  bottom: 23px;
-  right: 33px; }
+  bottom: 1.45rem;
+  right: 2rem; }
 
 .modal__btn {
-  padding: 8px 16px 8px 8px;
+  padding: .5rem 1rem .5rem .5rem;
   border-radius: 2px;
   box-shadow: none;
   border: 1px solid #AAAAAA; }
@@ -224,8 +231,8 @@ a {
   background-color: #1C6EA4;
   color: #ffffff;
   border: #1C6EA4;
-  margin-right: 10px;
-  padding: 9px 23px 9px 13px; }
+  margin-right: 0.625rem;
+  padding: 0.5625rem 1.5rem 0.5625rem 0.75rem; }
   .modal__save-btn:hover {
     background-color: #91AEC6;
     cursor: pointer; }
@@ -243,12 +250,12 @@ a {
   opacity: .9; }
 
 .modal__form-wrapper {
-  height: 28rem;
+  height: 27rem;
   overflow-y: scroll; }
 
 .form__group {
   position: relative;
-  padding: 15px 0 0;
+  padding: 1rem 0 0;
   margin-top: 1.25rem;
   width: 50%; }
 
@@ -260,7 +267,7 @@ a {
   outline: 0;
   font-size: 1.2rem;
   color: #000000;
-  padding: 20px 0 8px 0;
+  padding: 1.25rem 0 .5rem 0;
   background: transparent;
   transition: border-color 0.2s; }
   .form__field::placeholder {
@@ -268,7 +275,7 @@ a {
   .form__field:placeholder-shown ~ .form__label {
     font-size: 1rem;
     cursor: text;
-    top: 20px; }
+    top: 1.25rem; }
 
 .form__label {
   position: absolute;
@@ -276,10 +283,10 @@ a {
   display: block;
   transition: 0.2s;
   font-size: 1rem;
-  color: #9b9b9b; }
+  color: #666666; }
 
 .form__field:focus {
-  padding-bottom: 6px;
+  padding-bottom: 0.375rem;
   font-weight: 700;
   border-width: 3px;
   border-image: linear-gradient(to right, #1C6EA4, #91AEC6);
