--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,11 +3,13 @@ $blue-light: #91AEC6;
 $blue-aquamarin:blue;
 
 $white: #ffffff;
+$black: #000000;
 $gray-light: #B3B3B3;
 $gray-light-2: #EEEEEE;
 $gray-light-3: #DDDDDD;
 $gray-dark: #AAAAAA;
-$gray-dark-2: #888888;
+$gray-dark-2: #666666;
+$gray-dark-3: #9b9b9b;
 
 $gray-blue-1: #D0E4F5;
 $gray-blue-2: #91AEC6;
