--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,3 +8,13 @@ body {
 h1 {
     margin-bottom: 1rem;
 }
+
+h2 {
+    margin-bottom: 0;
+    margin-top: 1rem;
+}
+
+h3 {
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+}
