--- a/sass/components/_table.scss
+++ b/sass/components/_table.scss
@@ -118,6 +118,8 @@ table.table--blue tfoot a.table__show-rows {
 
 .table__select {
     color:$blue-dark;
+    width: 100%;
+    min-width: 50px;
 }
 
 
